<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE3E3"
    tools:context=".activities.RegisterActivity">
    <ImageView
        android:id="@+id/imageView_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kayitsayfa" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="65dp"
        android:paddingStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#00D0C6D5"
            android:textColorHint="@color/white"
            android:textColorLink="#05F1ECEC"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="numberSigned"
            android:password="true"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/editText_enter_timer"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/daily_working_hours"
            android:inputType="numberSigned"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:ems="2"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:shadowColor="#673AB7"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textColorLink="#751B85"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-45dp"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout" />

    <TextView
        android:id="@+id/postMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>