<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/formyeni" />



    <EditText
        android:id="@+id/editText_username"
        android:textColorHint="@color/white"
        android:layout_width="180dp"
        android:textColor="@color/white"
        android:layout_height="40dp"
        android:layout_marginTop="358dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="10dp"

        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"/>

    <EditText
        android:id="@+id/editText_password"
        android:textColorHint="@color/white"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="320dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberSigned"
        android:password="true"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_username"
        android:background="@android:color/transparent"
        />

    <TextView
        android:id="@+id/login_button"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/editText_password"
        app:layout_constraintStart_toEndOf="@+id/textView_signup"
        app:layout_constraintTop_toBottomOf="@id/editText_password"
        android:textColor="@color/white"
        android:text="@string/login"

        />

    <TextView
        android:id="@+id/textView_signup"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="135dp"
        app:layout_constraintEnd_toStartOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
       android:textColor="@color/white"/>

    <TextView
        android:id="@+id/gizli"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
        android:layout_marginTop="70dp"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>